[gd_scene load_steps=5 format=2]

[ext_resource path="res://Img/tilemap1.png" type="Texture" id=1]
[ext_resource path="res://scene/add/gd/potato_chip.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=2]
resource_name = "shine"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 0.153893 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="potato_chip" type="Area2D"]
z_index = 1
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 2
region_enabled = true
region_rect = Rect2( 48, 16, 32, 16 )

[node name="can_pick" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="killself" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/shine = SubResource( 2 )
[connection signal="area_entered" from="." to="." method="_on_potato_chip_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_potato_chip_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_potato_chip_body_entered"]
[connection signal="timeout" from="can_pick" to="." method="_on_can_pick_timeout"]
[connection signal="timeout" from="killself" to="." method="_on_killself_timeout"]
